добавлено 2 экрана, MainActivity3-4, связанные со списками мест, и добавлены картинки

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="teal_700">#018786</color> <!-- темный вариант второго цвета -->
     <color name="white">#FFFFFF</color> <!-- цвет белый -->
     <color name="black">#000000</color> <!-- цвет черный -->
+    <color name="lam">#A0694A</color>
+    <color name="brown">#A0694A</color>
+    <color name="dark_brown">#8B4513</color>
 </resources>
