--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -7,19 +7,248 @@
     tools:context=".ui.places.PlacesFragment">
 
 
-    <TextView
-        android:id="@+id/text_places"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
 
-        android:textAlignment="center"
-        android:textSize="20sp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="19dp"
+            android:layout_marginTop="8dp"
+            android:text="Интересные места"
+            android:textColor="#A0694A"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txt1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="46dp"
+            android:text="Куда пойти с друзьями, где отдохнуть, что показать туристам."
+            android:textColor="#A0694A"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="67dp"
+            android:src="@android:drawable/ic_menu_search" />
+
+        <ListView
+            android:id="@+id/lv"
+            android:layout_width="181dp"
+            android:layout_height="894dp"
+            android:layout_below="@+id/txt"
+            android:layout_marginTop="71dp"
+            android:entries="@array/mesta2" />
+
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="77dp"
+            android:layout_height="46dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="85dp"
+            android:layout_marginRight="27dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/zagorodny_park" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="81dp"
+            android:layout_height="49dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="138dp"
+            android:layout_marginRight="24dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/master_class_prostoart" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="85dp"
+            android:layout_height="47dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="194dp"
+            android:layout_marginRight="21dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/master_class_kolokol" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="72dp"
+            android:layout_height="48dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="246dp"
+            android:layout_marginRight="26dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/museum_aviation" />
+
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="87dp"
+            android:layout_height="47dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="298dp"
+            android:layout_marginRight="18dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/museum_chocolate" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="89dp"
+            android:layout_height="51dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="348dp"
+            android:layout_marginRight="16dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/stalin_bunker" />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="404dp"
+            android:layout_marginRight="21dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/questguru" />
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="464dp"
+            android:layout_marginRight="21dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/bar1" />
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="519dp"
+            android:layout_marginRight="21dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/smoky" />
+
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="577dp"
+            android:layout_marginRight="21dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/bleva" />
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="633dp"
+            android:layout_marginRight="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/pos" />
+
+
+        <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="693dp"
+            android:layout_marginRight="21dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/duck" />
+
+
+        <ImageView
+            android:id="@+id/imageView13"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="753dp"
+            android:layout_marginRight="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/show" />
+
+        <ImageView
+            android:id="@+id/imageView14"
+            android:layout_width="82dp"
+            android:layout_height="54dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="810dp"
+            android:layout_marginRight="21dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/muzeu" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lv"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/imageRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="11dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+        </LinearLayout>
+    </RelativeLayout>
+    </ScrollView>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
