--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,18 +32,20 @@
         app:layout_constraintVertical_bias="0.89" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/searchInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="   Поиск"
+        android:inputType="textCapSentences|textAutoCorrect"
+
         android:minHeight="48dp"
-        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton4"
-        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton4"
+        app:layout_constraintBottom_toBottomOf="@+id/searchButton"
+        app:layout_constraintEnd_toStartOf="@+id/searchButton"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/text_home" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton4"
+        android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
