--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -11,18 +11,22 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="135dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="148dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="148dp"
             android:text="Мои списки"
             android:textColor="#A0694A"
             android:textSize="20sp" />
@@ -32,9 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_below="@id/txt"
-            android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
-            android:entries="@array/mesta1"/>
+            android:layout_marginTop="16dp"
+            android:entries="@array/mesta1" />
 
         <TextView
             android:id="@+id/txt2"
@@ -45,16 +49,16 @@
             android:layout_marginTop="16dp"
             android:text="Мои адреса"
             android:textColor="#A0694A"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <ListView
             android:id="@+id/lv1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_below="@id/txt2"
-            android:layout_marginTop="16dp"
+            android:layout_below="@+id/txt2"
             android:layout_marginHorizontal="16dp"
-            android:entries="@array/mesta3"/>
+            android:layout_marginTop="16dp"
+            android:entries="@array/mesta3" />
 
         <ImageView
             android:id="@+id/imageView15"
