--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Views" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.ViewApp" parent="Theme.MaterialComponents.Light.NoActionBar">
+
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" >@color/lam</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowLightStatusBar">false</item>
         <!-- Customize your dark theme here. -->
         <item name="colorPrimary">#1565C0</item>
     </style>
