--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ViewApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ViewApp" parent="Theme.MaterialComponents.Light.NoActionBar">
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/lam</item>
+        <item name="android:statusBarColor" >@color/lam</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowLightStatusBar">true</item>
 
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#C6ADCD</item>
